--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.10"
+    ext{
+        version_android_gradle_plugin = '4.0.1'
+        version_core = "1.3.1"
+        version_constraint_layout = "1.1.3"
+        version_glide = "4.8.0"
+        version_kotlin = "1.3.72"
+        version_lifecycle = "2.2.0"
+        version_moshi = "1.9.3"
+        version_navigation = "1.0.0"
+        version_retrofit = "2.9.0"
+        version_recyclerview = "1.0.0"
+        room_version = "2.3.0-beta02"
+        version_coroutines = "1.0.1"
+    }
     repositories {
         google()
         jcenter()
@@ -8,7 +22,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
