--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         version_recyclerview = "1.0.0"
         room_version = "2.3.0-beta02"
         version_coroutines = "1.0.1"
+        version_mdc = "1.4.0-alpha01"
     }
     repositories {
         google()
