--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,9 @@ dependencies {
     // coroutines for getting off the UI thread
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutines"
+
+
+    // Paging
+    implementation "androidx.paging:paging-runtime-ktx:$version_paging"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha08"
 }
