Added implementation of Koin

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         version_coroutines = "1.0.1"
         version_mdc = "1.4.0-alpha01"
         version_paging = "3.0.0-beta01"
+        version_koin = '2.2.2'
     }
     repositories {
         google()
