--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,7 @@ dependencies {
     // Paging
     implementation "androidx.paging:paging-runtime-ktx:$version_paging"
     implementation "androidx.paging:paging-compose:1.0.0-alpha08"
+
+    //Koin
+    implementation "org.koin:koin-core:$version_koin"
 }
