--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'koin'
 
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -20,6 +21,7 @@ android {
     }
     buildFeatures{
         dataBinding true
+        compose true
     }
     buildTypes {
         release {
@@ -31,6 +33,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    composeOptions{
+        kotlinCompilerExtensionVersion '1.0.0-beta01'
+    }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -94,4 +100,23 @@ dependencies {
     implementation "org.koin:koin-androidx-workmanager:$version_koin"
     // Koin AndroidX Jetpack Compose
     implementation "org.koin:koin-androidx-compose:$version_koin"
+
+    ///Compose
+    implementation 'androidx.compose.ui:ui:1.0.0-beta01'
+    // Tooling support (Previews, etc.)
+    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta01'
+    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+    implementation 'androidx.compose.foundation:foundation:1.0.0-beta01'
+    // Material Design
+    implementation 'androidx.compose.material:material:1.0.0-beta01'
+    // Material design icons
+    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta01'
+    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta01'
+    // Integration with activities
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha03'
+    // Integration with ViewModels
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha02'
+    // Integration with observables
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
+    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta01'
 }
