--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.31"
+    ext.kotlin_version = "1.4.30"
     ext{
         version_android_gradle_plugin = '4.0.1'
         version_core = "1.3.1"
         version_constraint_layout = "1.1.3"
         version_glide = "4.8.0"
-        version_kotlin = "1.3.72"
+        version_kotlin = "1.4.30"
         version_lifecycle = "2.2.0"
         version_moshi = "1.9.3"
         version_navigation = "1.0.0"
@@ -23,7 +23,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha08'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
         classpath "org.koin:koin-gradle-plugin:$version_koin"
