--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,4 +121,6 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
     implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta01'
     implementation "androidx.compose.compiler:compiler:1.0.0-beta01"
+    //ConstraintLayout Compose
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta01"
 }
