--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
 
     //Retrofit and Moshi
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
