Downgrade Koin to 2.2.2 stable and Fix issue with getViewModelExt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
-
+apply plugin: 'koin'
 
 android {
     compileSdkVersion 30
@@ -40,6 +40,13 @@ android {
         jvmTarget = '1.8'
     }
 }
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach{
+    kotlinOptions{
+        jvmTarget = '1.8'
+    }
+}
+
 
 dependencies {
 
@@ -89,15 +96,18 @@ dependencies {
     implementation "androidx.paging:paging-compose:1.0.0-alpha08"
 
     //Koin
-    implementation "io.insert-koin:koin-core:$version_koin"
-// Koin main features for Android (Scope,ViewModel ...)
-    implementation "io.insert-koin:koin-android:$version_koin"
-// Koin Android - experimental builder extensions
-    implementation "io.insert-koin:koin-android-ext:$version_koin"
-// Koin for Jetpack WorkManager
-    implementation "io.insert-koin:koin-androidx-workmanager:$version_koin"
-// Koin for Jetpack Compose (unstable version)
-    implementation "io.insert-koin:koin-androidx-compose:$version_koin"
+// Koin AndroidX Scope features
+    implementation "org.koin:koin-androidx-scope:$version_koin"
+// Koin AndroidX ViewModel features
+    implementation "org.koin:koin-androidx-viewmodel:$version_koin"
+// Koin AndroidX Fragment features
+    implementation "org.koin:koin-androidx-fragment:$version_koin"
+// Koin AndroidX WorkManager
+    implementation "org.koin:koin-androidx-workmanager:$version_koin"
+// Koin AndroidX Jetpack Compose
+    implementation "org.koin:koin-androidx-compose:$version_koin"
+// Koin AndroidX Experimental features
+    implementation "org.koin:koin-androidx-ext:$version_koin"
 
     ///Compose
     implementation 'androidx.compose.ui:ui:1.0.0-beta01'
