--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
 
     //Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
-    implementation "dev.chrisbanes.accompanist:accompanist-glide:0.6.1"
+    implementation "dev.chrisbanes.accompanist:accompanist-glide:$version_glide_accompanist"
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
@@ -109,25 +109,26 @@ dependencies {
 // Koin AndroidX Experimental features
     implementation "org.koin:koin-androidx-ext:$version_koin"
 
+
     ///Compose
-    implementation 'androidx.compose.ui:ui:1.0.0-beta01'
+    implementation "androidx.compose.ui:ui:$version_compose"
     // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta01'
+    implementation "androidx.compose.ui:ui-tooling:$version_compose"
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation 'androidx.compose.foundation:foundation:1.0.0-beta01'
+    implementation "androidx.compose.foundation:foundation:$version_compose"
     // Material Design
-    implementation 'androidx.compose.material:material:1.0.0-beta01'
+    implementation "androidx.compose.material:material:$version_compose"
     // Material design icons
-    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta01'
-    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta01'
+    implementation "androidx.compose.material:material-icons-core:$version_compose"
+    implementation "androidx.compose.material:material-icons-extended:$version_compose"
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha03'
+    implementation "androidx.activity:activity-compose:$version_compose_minor"
     // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha02'
     // Integration with observables
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
-    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta01'
-    implementation "androidx.compose.compiler:compiler:1.0.0-beta01"
+    implementation "androidx.compose.runtime:runtime-livedata:$version_compose"
+    implementation "androidx.compose.runtime:runtime-rxjava2:$version_compose"
+    implementation "androidx.compose.compiler:compiler:$version_compose"
     //ConstraintLayout Compose
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha03"
+    implementation "androidx.constraintlayout:constraintlayout-compose:$version_compose_minor"
 }
