--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ buildscript {
         version_mdc = "1.4.0-alpha01"
         version_paging = "3.0.0-beta01"
         version_koin = '2.2.2'
+        version_compose = '1.0.0-beta01'
+        version_compose_minor = '1.3.0-alpha03'
+        version_glide_accompanist = '0.6.1'
     }
     repositories {
         google()
