--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+/.idea
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
 local.properties
+/app/src/main/ic_logo-playstore.png
+/Logo.jpg
+/Logo.png
+/Logo.svg
