--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,14 @@ dependencies {
     //Retrofit and Moshi
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$version_adapter_rxjava"
     implementation "com.squareup.moshi:moshi:$version_moshi"
     implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$version_moshi"
+    //RxJava
+    implementation "io.reactivex.rxjava2:rxjava:$version_rxjava"
+    implementation "io.reactivex.rxjava2:rxandroid:$version_rxandroid"
+
 
     //Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
@@ -80,6 +85,8 @@ dependencies {
     // Paging
     implementation "androidx.paging:paging-runtime-ktx:$version_paging"
     implementation "androidx.paging:paging-compose:1.0.0-alpha08"
+    // RxJava2 support for paging
+    implementation "androidx.paging:paging-rxjava2:$version_paging"
 
     //Koin
     implementation "org.koin:koin-core:$version_koin"
@@ -94,4 +101,5 @@ dependencies {
     implementation "org.koin:koin-androidx-workmanager:$version_koin"
     // Koin AndroidX Jetpack Compose
     implementation "org.koin:koin-androidx-compose:$version_koin"
+
 }
