--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.mrfiring.shiftweatherapp">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".WeatherApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_logo"
-        android:name=".WeatherApplication"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherTheming">
-        <activity android:name=".presentation.MainActivity">
+        <activity
+            android:theme="@style/Theme.SplashTheme"
+            android:name=".presentation.SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".presentation.MainActivity" />
     </application>
 
 </manifest>
