--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,9 +57,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+
+    //Testing implementations
+    testImplementation "io.mockk:mockk:$version_mockk"
+    testImplementation "junit:junit:$version_junit"
+    androidTestImplementation "androidx.test.ext:junit:$version_ext_junit"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$version_compose"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$version_coroutines_test"
 
     //Material components
     api "com.google.android.material:material:$version_mdc"
