--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,12 @@ buildscript {
         version_compose = '1.0.0-beta01'
         version_compose_minor = '1.3.0-alpha03'
         version_glide_accompanist = '0.6.1'
+
+        //Test implementations
+        version_mockk = '1.10.6'
+        version_junit = '4.13.2'
+        version_ext_junit = '1.1.2'
+        version_coroutines_test = '1.4.3'
     }
     repositories {
         google()
