Migration to mavenCentral Compose nav upd Gradle upd

--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,10 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha08'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha09'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.koin:koin-gradle-plugin:$version_koin"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
@@ -46,6 +47,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
